# Rconfig

./: .gitattributes  .gitignore  AGENTS.md  Cargo.toml  README.md  deny.toml
.github/: dependabot.yml
.github/workflows/: audit.yml  ci.yml  release.yml
_prd/: todo.md
crates/rcfg-app/: Cargo.toml
crates/rcfg-app/src/: lib.rs
crates/rcfg-lang/: Cargo.toml  README.md
crates/rcfg-lang/src/: ast.rs  error.rs  formatter.rs  lexer.rs  lib.rs  parser.rs  semantic.rs  span.rs
crates/rcfg-lang/src/semantic/: eval.rs  exports.rs  helpers.rs  mod.rs  monolith.rs  runtime.rs  schema_check.rs  types.rs  values_check.rs
crates/rcfg-lang/src/semantic/schema_check/: collector.rs  references.rs  type_checker.rs
crates/rcfg-lang/tests/: formatter_tests.rs  parser_tests.rs  semantic_tests.rs  span_tests.rs
crates/rcfg-lsp/: Cargo.toml
crates/rcfg-lsp/src/: document.rs  lib.rs  main.rs  position.rs  project.rs  server.rs  tests.rs
crates/rcfg-lsp/src/providers/: completion.rs  diagnostics.rs  document_symbol.rs  formatting.rs  goto_def.rs  hover.rs  mod.rs
crates/rcfg-tui/: Cargo.toml
crates/rcfg-tui/src/: app.rs  docs.rs  event.rs  lib.rs  model.rs  render.rs  runtime.rs  save.rs  state.rs
docs/: architecture.md  cli.md  cmake.md  development.md  dsl.md  quickstart.md
examples/: .gitignore
examples/cpp-cmake/: CMakeLists.txt  Config.toml  README.md
examples/cpp-cmake/context/: prod.json  windows.json
examples/cpp-cmake/profiles/: base.rcfgv
examples/cpp-cmake/profiles/bad/: env_parse_failed.rcfgv  inactive_assignment.rcfgv  range_violation.rcfgv
examples/cpp-cmake/src/: main.cpp  schema.rcfg
fuzz/: Cargo.toml
fuzz/corpus/fuzz_parse_schema/: dep_baz_schema.rcfg  dep_foo_schema.rcfg  dep_qux_schema.rcfg
fuzz/corpus/fuzz_parse_values/: base.rcfgv  dev.rcfgv  inactive_assignment.rcfgv  prod.rcfgv
fuzz/fuzz_targets/: fuzz_parse_schema.rs  fuzz_parse_values.rs
src/: main.rs
src/cli/: args.rs  diagnostics.rs  i18n_extract.rs  loaders.rs  loaders_tests.rs  mod.rs  render.rs
src/cli/commands/: check.rs  dump.rs  export.rs  fmt.rs  i18n.rs  menuconfig.rs  mod.rs
tests/: cli_tests.rs  conformance_tests.rs  dump_snapshot_tests.rs  menuconfig_script_tests.rs
tests/conformance/fail/range_violation/: expected.json  schema.rcfg  values.rcfgv
tests/conformance/fail/type_mismatch/: expected.json  values.rcfgv
tests/conformance/golden/c_header_basic/: expected.h  schema.rcfg
tests/conformance/ok/basic_bool/: schema.rcfg  values.rcfgv
tests/conformance/ok/match_activation/: schema.rcfg  values.rcfgv
tests/snapshots/dump/: diagnostics.json  resolved.json  schema_ir.json
