[workspace]
members = ["crates/rcfg-app", "crates/rcfg-lang", "crates/rcfg-lsp", "crates/rcfg-tui"]
resolver = "2"

[package]
name = "Rconfig"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"

[[bin]]
name = "rcfg"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5.31", features = ["derive"] }
rcfg-app = { path = "crates/rcfg-app" }
rcfg-lang = { path = "crates/rcfg-lang" }
rcfg-tui = { path = "crates/rcfg-tui" }
serde_json = "1.0.139"
toml = "0.8.20"
