[package]
name = "rcfg-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
rcfg-lang = { path = "../crates/rcfg-lang" }

[[bin]]
name = "fuzz_parse_schema"
path = "fuzz_targets/fuzz_parse_schema.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_parse_values"
path = "fuzz_targets/fuzz_parse_values.rs"
test = false
doc = false
bench = false

[workspace]
