[package]
name = "rcfg-lsp"
version = "0.1.0"
edition = "2024"
rust-version = "1.86"
license = "Apache-2.0"

[dependencies]
rcfg-lang = { path = "../rcfg-lang" }
serde_json = "1.0.139"
tokio = { version = "1.43.0", features = ["rt-multi-thread", "macros", "io-std", "time", "sync"] }
toml = "0.8.20"
tower-lsp = "0.20.0"

[dev-dependencies]
futures-util = "0.3.31"
tower-service = "0.3.3"
